; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_vtime.c_add_virt_timer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_vtime.c_add_virt_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vtimer_list = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_virt_timer(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.vtimer_list*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.vtimer_list*
  store %struct.vtimer_list* %5, %struct.vtimer_list** %3, align 8
  %6 = load %struct.vtimer_list*, %struct.vtimer_list** %3, align 8
  %7 = call i32 @prepare_vtimer(%struct.vtimer_list* %6)
  %8 = load %struct.vtimer_list*, %struct.vtimer_list** %3, align 8
  %9 = getelementptr inbounds %struct.vtimer_list, %struct.vtimer_list* %8, i32 0, i32 0
  store i64 0, i64* %9, align 8
  %10 = load %struct.vtimer_list*, %struct.vtimer_list** %3, align 8
  %11 = call i32 @internal_add_vtimer(%struct.vtimer_list* %10)
  ret void
}

declare dso_local i32 @prepare_vtimer(%struct.vtimer_list*) #1

declare dso_local i32 @internal_add_vtimer(%struct.vtimer_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
